# ypkgupgr

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.ps1  build.sh  buildDevMacLinux.ps1  buildDevWindows.ps1  installTestMacLinux.ps1  installTestMacLinux.sh  installTestWindows.ps1  installTestWindows.sh  pyproject.toml  requirements.txt  run.sh  run_win.ps1  uploadDevMacLinux.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: python-publish.yml
src/PackageUpdater_yesseruser/: __init__.py  updatepip.py
src/yesserpackageupdater/: __init__.py  __main__.py  colors.py
src/ypkgupgr/: __init__.py  __main__.py  appdata.py  colors.py  consts.py  graphics.py  ignored.py  logs.py  misc.py  old_init.py
