[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["asyncio"]
name = "yesserpackageupdater"
version = "1.3.3"
authors = [
  { name="yesseruser", email="yesseruser@gmail.com" },
]
description = "A simple pip package updater"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
yesserpackageupdater = "yesserpackageupdater:update_packages_script"

[project.urls]
"Homepage" = "https://github.com/yesseruser/YesserPackageUpdater"
"Bug Tracker" = "https://github.com/yesseruser/YesserPackageUpdater/issues"
