[build-system]
requires = ["setuptools>=61.0", "appdata>=2.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ypkgupgr"

# The workflow takes care of the version. No need to change.
version = "1.7.69"

authors = [
  { name="yesseruser", email="yesseruser@gmail.com" },
]
description = "A simple pip package updater"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
yesserpackageupdater = "ypkgupgr:update_packages_script"
ypkgupgr = "ypkgupgr:update_packages_script"

[project.urls]
"Homepage" = "https://github.com/yesseruser/ypkgupgr"
"Bug Tracker" = "https://github.com/yesseruser/ypkgupgr/issues"
