[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ypkgupgr"

# The workflow takes care of the version. No need to change.
version = "69.69.69"

authors = [
  { name="yesseruser", email="yesseruser@gmail.com" },
]
description = "A simple pip package updater"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "platformdirs~=4.2.0",
    "click~=8.1.7",
    "pyperclip~=1.9.0"
]

[project.scripts]
yesserpackageupdater = "ypkgupgr:run_from_script"
ypkgupgr = "ypkgupgr:run_from_script"

[project.urls]
"Homepage" = "https://github.com/yesseruser/ypkgupgr"
"Bug Tracker" = "https://github.com/yesseruser/ypkgupgr/issues"
